:new: Add prettier configuration and update ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,21 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "~constants/*": [
+        "./src/constants/*",
+      ],
+      "~database/*": [
+        "./src/database/*",
+      ]
+    },
+    "strict": true,
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": false,
   }
 }
