:new: New boiler plate code

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
 NODE_ENV=development
-DATABASE_CONNECTION_URI="postgres://corp_api:corp_api@localhost:6801/corp_api"
+DATABASE_CONNECTION_URI="postgres://nest_api:nest_api@localhost:6801/nest_api"
